# progpow-rust

./: .gitignore  Cargo.toml
pp_full/: BUILD_NOTES.md  Cargo.toml  build.rs
pp_full/lib/: CMakeLists.txt  EthCompilerSettings.cmake
pp_full/lib/libdevcore/: CMakeLists.txt  CommonData.h  Log.h
pp_full/lib/libethash/: compiler.h
pp_full/lib/libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner_kernel.cu
pp_full/lib/libethcore/: CMakeLists.txt  EthashAux.cpp
pp_full/lib/libexternal/: CMakeLists.txt  progpow.cpp  progpow_impl.cpp
pp_full/src/: ffi.rs  lib.rs  types.rs  utils.rs
pp_light/: Cargo.toml
pp_light/src/: cache.rs  compute.rs  keccak.rs  lib.rs  progpow.rs  seed_compute.rs  shared.rs
src/: generator.rs  lib.rs  types.rs
src/hardware/: cpu.rs  gpu.rs  mod.rs
