[package]
name = "progpow"
version = "0.1.0"
authors = ["Brick Abode <epiccash@brickabode.com>"]
edition = "2021"

[dependencies]
libc = "0.2.171"
num-bigint = "0.4"
num-traits = "0.2"
byteorder = "1.5.0"
lazy_static = "1"
dirs = "1.0.3"
progpow_cpu = { package = "progpow-light", path = "../progpow-light" }
progpow-base = { path = "../progpow-base" }

[features]
default = []
cuda = []
opencl = []
